# otus-ml-skel

./: .dockerignore  .gitignore  CONTRIBUTING.md  README.md  README_monitoring.md  bug.md  docker-compose.dev.yml  docker-compose.prod.yml  er.name Nikolay  kubectl_config_view.yml  pyproject.toml  requirements.txt  setup.py  start.sh
.github/actions/: python.yml
.github/workflows/: docker.yml  python.yml
dags/: example.py
docker/: Dockerfile
docker/titanic/: Dockerfile  multi-stage.dockerfile
docker/titanic_train/: Dockerfile
docker/traefik/: Dockerfile  traefik.prod.toml
k8s/: beats.yml  elastic.yml  kibana.yml  monitoring-titanic.yml  production-issuer.yml  prom_rbac.yml  titanic-deployment.yml  titanic-ingress.yml  titanic-service.yml  titanic-train-job.yml
notebook/: Baseline.ipynb  EDA.ipynb
scripts/: train_save_model.py
service/: demo.py  main.py  send_request.py  test_main.py
src/titanic/data/: make_dataset.py  validation.py
src/titanic/features/: extract.py  fill.py  ordering.py
src/titanic/models/: serialize.py  train.py
tests/: test_data_fill.py  test_data_validation.py  test_features_extract.py  test_features_fill.py  test_fill_age.py
titanic/data/: make_dataset.py
